--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
   <main>
-    <div>
-      <div>
-        <div>
+    <div class="grid pad-t-1-2 pad-b-1-2">
+      <div class="unit xs-1 s-1 m-1-3 pad-b-1-2 gutter-1-2">
+        <div class="card island">
           <a href="#">
-            <i>
+            <i class="icon i-64">
               <img src="images/placeholder-hex.svg" alt="">
             </i>
-            <span>Human Paladin</span>
-            <p>Dedicated to the everlasting oath of honour, justice and goodness.</p>
-            <p>Choose Paladin</p>
+            <span class="icon-label block tera bold pad-b pad-t">Human Paladin</span>
+            <p class="italic">Dedicated to the everlasting oath of honour, justice and goodness.</p>
+            <p class="btn btn-ghost push-0 island-1-4">Choose Paladin</p>
           </a>
         </div>
       </div>
