--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
           </a>
         </div>
       </div>
+      <div class="unit xs-1 s-1 m-1-3 pad-b-1-2 gutter-1-4">
+        <div class="card island">
+          <a href="#">
+            <i class="icon i-64">
+              <img src="images/placeholder-hex.svg" alt="">
+            </i>
+            <span class="icon-label block tera bold pad-b pad-t">Drow Rogue</span>
+            <p class="italic">A near invincible killer who’s craft was honed in the dark caves.</p>
+            <p class="btn btn-ghost push-0 island-1-4">Choose Rogue</p>
+          </a>
+        </div>
+      </div>
 
 </body>
 </html>
