--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
           </a>
         </div>
       </div>
+      <div class="unit xs-1 s-1 m-1-3 pad-b-1-2 gutter-1-4">
+        <div class="card island">
+          <a href="#">
+            <i class="icon i-64">
+              <img src="images/placeholder-hex.svg" alt="">
+            </i>
+            <span class="icon-label block tera bold pad-b pad-t">Wood Elf Ranger</span>
+            <p class="italic">A rugged individualist who survives on wits, will and muscle.</p>
+            <p class="btn btn-ghost push-0 island-1-4">Choose Ranger</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
 
 </body>
 </html>
